--- a/public/services/src/app/views/detail/detail.less
+++ b/public/services/src/app/views/detail/detail.less
@@ -92,7 +92,7 @@
 						float: left;
 						width: 1.25rem;
 						height: 1.51rem;
-						background: url(/images/icon-like-deepCol.png) no-repeat 0 center;
+						background: url(/images/like1.png) no-repeat 0 center;
 						background-size: 100%;
 					}
 					.text-like-btn{
