--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -37,7 +37,7 @@
 }
 .menu{
     position: fixed;
-    bottom: 8%;/*to be modified*/
+    bottom: 3.5rem;/*to be modified*/
     right: 2%;
     z-index: 980;
     .menuPs{
@@ -193,14 +193,16 @@
         width: 3.29rem;
         height: 3.29rem;
         margin-top: 0.93rem;
+        overflow: hidden;
+        border-radius: 50%;
+        background-color: #000;
         .menuBg{
             width: 100%;
             height: 100%;
             opacity: 0.89;
-            /*border: 0.08rem solid rgba(255,255,255,0.9);*/
-            border-radius: 100%;
-            /*box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);*/
             background-color: #000;
+            /*border: 0.08rem solid rgba(255,255,255,0.9);*/
+            /*box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);*/
         }
         .icon-top{
             display: block;
