--- a/public/services/src/app/views/personal/empty/empty.html
+++ b/public/services/src/app/views/personal/empty/empty.html
@@ -1,4 +1,4 @@
-<div class="empty-page">
+<div class="empty-page hide">
 	<img src="/images/icon-empty.png" alt="" class="empty-logo">
 	<div class="empty-p">暂时没有求P</div>
 	<a href="#upload/ask" class="empty-buttom">发布求P</a>
