--- a/public/services/src/app/views/detail/detail.html
+++ b/public/services/src/app/views/detail/detail.html
@@ -21,7 +21,7 @@
 	</div>
 	<% } %>
 	<div class="sectionFooter" id="replySectionFooter">
-		<a href="/services/download/index" class="workDesc"><%= desc %></a>
+		<a class="workDesc"><%= desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share"></span>
 			<a href="#ask/detail/<%= ask_id %>" class="ask-detail">查看原图</a>
