--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -210,12 +210,12 @@
             height: 1.29rem;
             position: absolute;
             top: 0;
-            left: 0.36rem;
+            left: 0;
             right: 0;
             bottom: 0;
             margin: auto;
-            background: url(/images/icon-top.png) no-repeat 0 0;
-            background-size: 100%;
+            background: url(/images/icon-top.png) no-repeat center;
+            background-size: contain;
         }
     }
 }
