--- a/public/services/src/app/views/hot/reply/reply.html
+++ b/public/services/src/app/views/hot/reply/reply.html
@@ -12,7 +12,7 @@
 			<div class="pic">
 				<% var i =0; _.each(ask_uploads, function(ask, i) { i++ %>
 					<% if(i==1) { %>
-				<img src="<%= ask.image_url %>" alt="原图">
+				<img src="<%= ask.image_url %>" alt="原图" class="imageLoad image">
 				<% }}) %>
 			</div>
 			<div class="div-line"></div>
