--- a/public/services/src/app/views/personal/header/header.less
+++ b/public/services/src/app/views/personal/header/header.less
@@ -10,7 +10,7 @@
     height: 9.32rem;
     padding-top: 1.93rem;
     box-sizing: border-box;
-    background-color: #ffed4f;
+    background-color: #f9d161;
     .user-info{
         /*width: 4.29rem;*/
         /*margin: 0 auto;*/
@@ -62,7 +62,7 @@
         a {
             font-size: 0.86rem;
             color: rgba(0,0,0,0.8);
-            border-bottom: 0.21rem solid #ffed4f;
+            border-bottom: 0.21rem solid #f9d161;
         }
     }
 }
