--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1192,7 +1192,7 @@ body {
   width: 50%;
   height: 3.14rem;
   color: #000;
-  background-color: #ffed4f;
+  background-color: #f9d161;
 }
 .post-footer .footerHelp .icon-help {
   display: inline-block;
@@ -1232,8 +1232,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -7.88rem 0 0 -12.14rem;
-  width: 24.29rem;
+  margin: -7.88rem 0 0 -50%;
+  width: 100%;
   height: 15.57rem;
   background-color: #fff;
   border-radius: 0.36rem;
@@ -1254,10 +1254,11 @@ body {
   margin-left: 0.36rem;
 }
 .window-fix .window .windowContent {
-  width: 22.5rem;
+  display: block;
+  width: 95%;
   box-sizing: border-box;
-  margin-top: 0.71rem;
-  margin-left: 0.89rem;
+  margin: 0.71rem auto 0;
+  /*margin-left: 0.89rem;*/
   background-color: #f0f0f0;
   border-radius: 0.21rem;
   overflow-y: hidden;
@@ -1494,7 +1495,7 @@ body {
   right: 0;
   width: 4rem;
   height: 4rem;
-  border: 0.21rem solid rgba(0, 0, 0, 0.05);
+  /*border: 0.21rem solid rgba(0,0,0,0.05);*/
   border-bottom: 0;
   border-radius: 0.21rem 0 0 0;
   background-color: rgba(0, 0, 0, 0.4);
@@ -1502,16 +1503,18 @@ body {
 .hot-pageSection .workSection .workPic .origin .tag {
   position: absolute;
   display: block;
-  top: -0.21rem;
-  left: -0.21rem;
+  top: 0;
+  left: 0;
+  padding: 0.1rem;
   width: 1.57rem;
   height: 0.71rem;
   line-height: 0.71rem;
   font-size: 0.5rem;
   text-align: center;
   border-radius: 0.21rem 0 0 0;
-  background-color: #Feee60;
+  background-color: #f9d161;
   z-index: 1;
+  border-radius: 0.2rem;
 }
 .hot-pageSection .workSection .workPic .origin .pic {
   width: 100%;
@@ -1601,6 +1604,252 @@ body {
   opacity: 0.3;
 }
 
+
+.uploadHeader {
+  width: 100%;
+  height: 3.93rem;
+  line-height: 3.93rem;
+  border-bottom: 1px solid #EDEDED;
+  font-size: 0;
+}
+.uploadHeader .backPage {
+  float: left;
+  margin-left: 0.82rem;
+  cursor: pointer;
+}
+.uploadHeader .backPage .icon-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0.75rem;
+  height: 1.36rem;
+  background: url(/images/icon-backPage.png) no-repeat 0 0;
+  background-size: 100%;
+  margin-right: 0.46rem;
+}
+.uploadHeader .backPage .text-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 1rem;
+  color: #000;
+  opacity: 0.8;
+}
+.uploadHeader .confirm-none {
+  float: right;
+  width: 4.29rem;
+  height: 1.86rem;
+  margin-top: 1.04rem;
+  margin-right: 0.86rem;
+  border-radius: 0.93rem;
+  background-color: #888;
+  color: #332D00;
+  font-size: 0.86rem;
+  text-align: center;
+  cursor: pointer;
+  /*font-weight: bold;*/
+}
+.uploadHeader .confirm {
+  float: right;
+  width: 4.29rem;
+  height: 1.86rem;
+  margin-top: 1.04rem;
+  margin-right: 0.86rem;
+  border-radius: 0.93rem;
+  box-shadow: 0 0.07rem 0.36rem 0 rgba(225, 228, 9, 0.5);
+  background-color: #ffe400;
+  color: #332D00;
+  font-size: 0.86rem;
+  text-align: center;
+  cursor: pointer;
+  /*font-weight: bold;*/
+}
+.leftArea {
+  float: left;
+}
+.leftArea .clips-wrapper {
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+  margin-right: 0.46rem;
+  border: 1px solid #eee;
+  border-radius: 0.18rem;
+  overflow: hidden;
+}
+.leftArea .clips-wrapper .clips {
+  display: block;
+  width: 100%;
+}
+.rightArea {
+  float: right;
+}
+.rightArea .clipsCount {
+  display: block;
+  margin-top: 4.2rem;
+  font-size: 0.79rem;
+  color: rgba(0, 0, 0, 0.2);
+}
+.uploadContent {
+  width: 94%;
+  margin: 0 3%;
+}
+.uploadContent .uploadPic-none {
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  border-bottom: 1px solid #F0F0F0;
+  height: 6.07rem;
+  line-height: 6.07rem;
+  padding-top: 1.07rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder {
+  position: relative;
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .cross {
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  z-index: 1;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList {
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
+  display: block;
+  width: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 2;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
+  position: absolute;
+  z-index: 0;
+  top: 0rem;
+  left: 0rem;
+  width: 3.93rem;
+  height: 3.93rem;
+  background: url(/images/holderBorder.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .holderMain {
+  position: absolute;
+  top: 45%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 2.21rem;
+  height: 2.25rem;
+  background: url(/images/holderMain.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic-none .uploadText {
+  margin-left: 0.79rem;
+  font-size: 1rem;
+  opacity: 0.2;
+}
+.uploadContent .uploadPic {
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom: 1px solid #F0F0F0;
+  height: 6.07rem;
+  line-height: 6.07rem;
+}
+.uploadContent .uploadPic .uploadThumb {
+  margin-top: 1.07rem;
+  position: relative;
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic .uploadThumb .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 1;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
+}
+.uploadContent .uploadPic .uploadThumb .thumb {
+  position: absolute;
+  border-radius: 0.21rem;
+  overflow: hidden;
+  top: 45%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  width: 3.93rem;
+  height: 3.93rem;
+  background: url(/images/origin-work.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic .uploadText {
+  margin-left: 0.79rem;
+  font-size: 1rem;
+  opacity: 0.2;
+}
+.uploadContent .uploadDesc {
+  display: block;
+  width: 100%;
+  margin: 1.07rem 0;
+}
+
+.empty-page {
+  padding: 3.64rem 0 2rem;
+  background-color: #f7f7f7;
+  text-align: center;
+}
+.empty-page .empty-logo {
+  display: block;
+  overflow: hidden;
+  width: 2.89rem;
+  height: 2.89rem;
+  border-radius: 50%;
+  margin: 0 auto 0.64rem;
+}
+.empty-page .empty-p {
+  text-align: center;
+  font-size: 0.93rem;
+  color: rgba(0, 0, 0, 0.3);
+  line-height: 1.2rem;
+  margin-bottom: 1.25rem;
+}
+.empty-page .empty-buttom {
+  display: inline-block;
+  padding: 0 1.5rem;
+  font-size: 0.86rem;
+  line-height: 1.72rem;
+  color: #000;
+  background-color: #ffed4f;
+  border-radius: 3.57rem;
+}
+
 .header-logo {
   width: 100%;
   height: 3.57rem;
@@ -1613,7 +1862,7 @@ body {
   height: 9.32rem;
   padding-top: 1.93rem;
   box-sizing: border-box;
-  background-color: #ffed4f;
+  background-color: #f9d161;
 }
 .header-portrait .user-info {
   /*width: 4.29rem;*/
@@ -1665,37 +1914,7 @@ body {
 .header-nav .active a {
   font-size: 0.86rem;
   color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.21rem solid #ffed4f;
-}
-
-.empty-page {
-  padding: 3.64rem 0 2rem;
-  background-color: #f7f7f7;
-  text-align: center;
-}
-.empty-page .empty-logo {
-  display: block;
-  overflow: hidden;
-  width: 2.89rem;
-  height: 2.89rem;
-  border-radius: 50%;
-  margin: 0 auto 0.64rem;
-}
-.empty-page .empty-p {
-  text-align: center;
-  font-size: 0.93rem;
-  color: rgba(0, 0, 0, 0.3);
-  line-height: 1.2rem;
-  margin-bottom: 1.25rem;
-}
-.empty-page .empty-buttom {
-  display: inline-block;
-  padding: 0 1.5rem;
-  font-size: 0.86rem;
-  line-height: 1.72rem;
-  color: #000;
-  background-color: #ffed4f;
-  border-radius: 3.57rem;
+  border-bottom: 0.21rem solid #f9d161;
 }
 
 .main-processing {
@@ -1987,220 +2206,4 @@ body {
   font-size: 0.71rem;
   line-height: 0.89rem;
   color: rgba(0, 0, 0, 0.49);
-}
-
-
-.uploadHeader {
-  width: 100%;
-  height: 3.93rem;
-  line-height: 3.93rem;
-  border-bottom: 1px solid #EDEDED;
-  font-size: 0;
-}
-.uploadHeader .backPage {
-  float: left;
-  margin-left: 0.82rem;
-  cursor: pointer;
-}
-.uploadHeader .backPage .icon-backPage {
-  display: inline-block;
-  vertical-align: middle;
-  width: 0.75rem;
-  height: 1.36rem;
-  background: url(/images/icon-backPage.png) no-repeat 0 0;
-  background-size: 100%;
-  margin-right: 0.46rem;
-}
-.uploadHeader .backPage .text-backPage {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 1rem;
-  color: #000;
-  opacity: 0.8;
-}
-.uploadHeader .confirm-none {
-  float: right;
-  width: 4.29rem;
-  height: 1.86rem;
-  margin-top: 1.04rem;
-  margin-right: 0.86rem;
-  border-radius: 0.93rem;
-  background-color: #888;
-  color: #332D00;
-  font-size: 0.86rem;
-  text-align: center;
-  cursor: pointer;
-  /*font-weight: bold;*/
-}
-.uploadHeader .confirm {
-  float: right;
-  width: 4.29rem;
-  height: 1.86rem;
-  margin-top: 1.04rem;
-  margin-right: 0.86rem;
-  border-radius: 0.93rem;
-  box-shadow: 0 0.07rem 0.36rem 0 rgba(225, 228, 9, 0.5);
-  background-color: #ffe400;
-  color: #332D00;
-  font-size: 0.86rem;
-  text-align: center;
-  cursor: pointer;
-  /*font-weight: bold;*/
-}
-.leftArea {
-  float: left;
-}
-.leftArea .clips-wrapper {
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-  margin-right: 0.46rem;
-  border: 1px solid #eee;
-  border-radius: 0.18rem;
-  overflow: hidden;
-}
-.leftArea .clips-wrapper .clips {
-  display: block;
-  width: 100%;
-}
-.rightArea {
-  float: right;
-}
-.rightArea .clipsCount {
-  display: block;
-  margin-top: 4.2rem;
-  font-size: 0.79rem;
-  color: rgba(0, 0, 0, 0.2);
-}
-.uploadContent {
-  width: 94%;
-  margin: 0 3%;
-}
-.uploadContent .uploadPic-none {
-  width: 100%;
-  position: relative;
-  box-sizing: border-box;
-  border-bottom: 1px solid #F0F0F0;
-  height: 6.07rem;
-  line-height: 6.07rem;
-  padding-top: 1.07rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder {
-  position: relative;
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .cross {
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
-  position: absolute;
-  top: 0;
-  opacity: 0;
-  z-index: 1;
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileList {
-  position: absolute;
-  top: 0;
-  overflow: hidden;
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
-  display: block;
-  width: 100%;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
-  position: absolute;
-  display: block;
-  z-index: 2;
-  top: -0.7rem;
-  right: -0.8rem;
-  width: 1.29rem;
-  height: 1.32rem;
-  background: url(/images/uploadCancel.png) no-repeat 0 0;
-  background-size: 100%;
-  cursor: pointer;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
-  position: absolute;
-  z-index: 0;
-  top: 0rem;
-  left: 0rem;
-  width: 3.93rem;
-  height: 3.93rem;
-  background: url(/images/holderBorder.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .holderMain {
-  position: absolute;
-  top: 45%;
-  left: 54%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  width: 2.21rem;
-  height: 2.25rem;
-  background: url(/images/holderMain.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic-none .uploadText {
-  margin-left: 0.79rem;
-  font-size: 1rem;
-  opacity: 0.2;
-}
-.uploadContent .uploadPic {
-  width: 100%;
-  box-sizing: border-box;
-  border-bottom: 1px solid #F0F0F0;
-  height: 6.07rem;
-  line-height: 6.07rem;
-}
-.uploadContent .uploadPic .uploadThumb {
-  margin-top: 1.07rem;
-  position: relative;
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic .uploadThumb .uploadCancel {
-  position: absolute;
-  display: block;
-  z-index: 1;
-  top: -0.7rem;
-  right: -0.8rem;
-  width: 1.29rem;
-  height: 1.32rem;
-  background: url(/images/uploadCancel.png) no-repeat 0 0;
-  background-size: 100%;
-  cursor: pointer;
-}
-.uploadContent .uploadPic .uploadThumb .thumb {
-  position: absolute;
-  border-radius: 0.21rem;
-  overflow: hidden;
-  top: 45%;
-  left: 54%;
-  transform: translate(-50%, -50%);
-  z-index: 0;
-  width: 3.93rem;
-  height: 3.93rem;
-  background: url(/images/origin-work.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic .uploadText {
-  margin-left: 0.79rem;
-  font-size: 1rem;
-  opacity: 0.2;
-}
-.uploadContent .uploadDesc {
-  display: block;
-  width: 100%;
-  margin: 1.07rem 0;
 }
