--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -126,7 +126,7 @@
 		width: 50%;
 		height: 3.14rem;
 		color: #000;
-		background-color: #ffed4f;
+		background-color: #f9d161;
 		.icon-help{
 			display: inline-block;
 			vertical-align: middle;
@@ -166,8 +166,8 @@
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		margin: -7.88rem 0 0 -12.14rem;
-		width: 24.29rem;
+		margin: -7.88rem 0 0 -50%;
+		width: 100%;
 		height: 15.57rem;
 		background-color: #fff;
 		border-radius: 0.36rem;
@@ -187,10 +187,11 @@
 			}
 		}
 		.windowContent{
-			width: 22.5rem;
+			display: block;
+			width: 95%;
 			box-sizing:border-box;
-			margin-top: 0.71rem;
-			margin-left: 0.89rem;
+			margin: 0.71rem auto 0;
+			/*margin-left: 0.89rem;*/
 			background-color: #f0f0f0;
 			border-radius: 0.21rem;
 			overflow-y: hidden;
