--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -346,3 +346,41 @@ body{
 		box-shadow: none;
 	}
 }
+.footer {
+    
+    .body-loading {
+        text-align: center;
+        background: #f7f7f7;
+    
+        .spinner {
+            padding: 10px;
+            text-align: center;
+
+            div {
+                width: 12px;
+                height: 12px;
+                background: #000000;
+                border-radius: 100%;
+                display: inline-block;
+                -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+                -webkit-animation-fill-mode: both;
+            }
+
+            .bounce1 {
+                -webkit-animation-delay: -0.32s;
+            }
+            .bounce2 {
+                -webkit-animation-delay: -0.16s;
+            }
+        }
+    }
+}
+
+@-webkit-keyframes bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0.0);
+    }
+    40% {
+        -webkit-transform: scale(1.0);
+    }
+}
