--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -1,5 +1,5 @@
 <div class="header-logo clearfix">
-	<a href="" class="logo">
+	<a href="#hot/reply" class="logo">
 		<img src="/images/logo.png" alt="LOGO">
 	</a>
 	<a href="" class="personalCenter">
