--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -89,9 +89,9 @@
 			<%= time(replies.created_at) %>
 		</span>
 	</div>
-	<div class="sectionContent">
+	<a href="#detail/detail/<%= replies.type %>/<%= replies.reply_id %>" class="sectionContent">
 		<img src="<%= replies.image_url %>" alt="原图">
-	</div>
+	</a>
 	<div class="sectionFooter" id="replySectionFooter<%= replies.reply_id %>">
 		<a class="workDesc"><%= replies.desc %></a>
 		<div class="footerBottom clearfix">
