--- a/public/services/src/app/views/detail/detail.less
+++ b/public/services/src/app/views/detail/detail.less
@@ -43,7 +43,7 @@
 		overflow: hidden;
 		display: block;
 		width: 100%;
-		max-height: 26.79rem;
+		/*max-height: 26.79rem;*/
 		img{
 			display: block;
 			width: 100%;
