--- a/public/services/src/app/views/hot/reply/reply.html
+++ b/public/services/src/app/views/hot/reply/reply.html
@@ -9,10 +9,10 @@
 		<img src="<%= image_url %>" alt="作品">
 		<div class="origin">
 			<span class="tag">原图</span>
-			<div class="pic">
+			<div class="pic center-loading-container">
 				<% var i =0; _.each(ask_uploads, function(ask, i) { i++ %>
 					<% if(i==1) { %>
-				<img src="<%= ask.image_url %>" alt="原图" class="imageLoad image">
+				<img src="<%= ask.image_url %>" alt="原图" class="imageLoad image center-loading">
 				<% }}) %>
 			</div>
 			<div class="div-line"></div>
