--- a/public/services/src/app/views/hot/reply/reply.less
+++ b/public/services/src/app/views/hot/reply/reply.less
@@ -57,8 +57,8 @@
                         display: block;
                         top: 0;
                         left: 0;
-                        padding: 0.1rem;
-                        width: 1.57rem;
+                        padding: 0.2rem;
+                        /*width: 1.57rem;*/
                         height: 0.71rem;
                         line-height: 0.71rem;
                         font-size: 0.5rem;
