--- a/public/services/src/app/views/menu/menu.less
+++ b/public/services/src/app/views/menu/menu.less
@@ -1,5 +1,6 @@
 .menuMy-list-hide {
     position: absolute;
+    z-index: 1;
     top: -400%;
     left: -200%;
     height: 700%;
@@ -86,6 +87,8 @@
             box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
             background-color: #fff;
             .menuItem{
+                position: relative;
+                z-index: 2;
                 display: block;
                 /*padding: 1rem 0;*/
                 padding: 1.36rem 0 1.36rem 2.57rem;
