--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1101,6 +1101,12 @@ body {
   color: #fe5401;
 }
 
+.footer {
+  width: 100%;
+}
+.footer .body-loading {
+  margin: 0 auto;
+}
 .detail-padding {
   padding-bottom: 3rem;
 }
@@ -1871,8 +1877,10 @@ body {
 }
 
 .myWork-pageSection {
-  display: block;
+  float: left;
+  /*display: block;*/
   width: 47%;
+  margin: 0 1.5% 3%;
   background-color: #fff;
 }
 .myWork-pageSection .workSection {
