--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -1,6 +1,8 @@
     .myWork-pageSection{
-        display: block;
+        float: left;
+        /*display: block;*/
         width: 47%;
+        margin: 0 1.5% 3%;
         background-color: #fff;
         .workSection{
             display: block;
