--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1108,7 +1108,7 @@ body {
   margin: 0 auto;
 }
 .detail-padding {
-  padding-bottom: 3rem;
+  /*padding-bottom: 3rem;*/
 }
 .post-workCount {
   width: 100%;
@@ -1484,6 +1484,289 @@ body {
   vertical-align: middle;
 }
 
+
+.uploadHeader {
+  width: 100%;
+  height: 3.93rem;
+  line-height: 3.93rem;
+  border-bottom: 1px solid #EDEDED;
+  font-size: 0;
+}
+.uploadHeader .backPage {
+  float: left;
+  margin-left: 0.82rem;
+  cursor: pointer;
+}
+.uploadHeader .backPage .icon-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0.75rem;
+  height: 1.36rem;
+  background: url(/images/icon-backPage.png) no-repeat 0 0;
+  background-size: 100%;
+  margin-right: 0.46rem;
+}
+.uploadHeader .backPage .text-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 1rem;
+  color: #000;
+  opacity: 0.8;
+}
+.uploadHeader .confirm-none {
+  float: right;
+  width: 4.29rem;
+  height: 1.86rem;
+  margin-top: 1.04rem;
+  margin-right: 0.86rem;
+  border-radius: 0.93rem;
+  background-color: #888;
+  color: #332D00;
+  font-size: 0.86rem;
+  text-align: center;
+  cursor: pointer;
+  /*font-weight: bold;*/
+}
+.uploadHeader .confirm {
+  float: right;
+  width: 4.29rem;
+  height: 1.86rem;
+  margin-top: 1.04rem;
+  margin-right: 0.86rem;
+  border-radius: 0.93rem;
+  box-shadow: 0 0.07rem 0.36rem 0 rgba(225, 228, 9, 0.5);
+  background-color: #ffe400;
+  color: #332D00;
+  font-size: 0.86rem;
+  text-align: center;
+  cursor: pointer;
+  /*font-weight: bold;*/
+}
+.leftArea {
+  float: left;
+}
+.leftArea .clips-wrapper {
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+  margin-right: 0.46rem;
+  border: 1px solid #eee;
+  border-radius: 0.18rem;
+  overflow: hidden;
+}
+.leftArea .clips-wrapper .clips {
+  display: block;
+  width: 100%;
+}
+.rightArea {
+  float: right;
+}
+.rightArea .clipsCount {
+  display: block;
+  margin-top: 4.2rem;
+  font-size: 0.79rem;
+  color: rgba(0, 0, 0, 0.2);
+}
+.uploadContent {
+  width: 94%;
+  margin: 0 3%;
+}
+.uploadContent .uploadPic-none {
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
+  border-bottom: 1px solid #F0F0F0;
+  height: 6.07rem;
+  line-height: 6.07rem;
+  padding-top: 1.07rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder {
+  position: relative;
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .cross {
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  z-index: 1;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList {
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
+  display: block;
+  width: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 2;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
+  position: absolute;
+  z-index: 0;
+  top: 0rem;
+  left: 0rem;
+  width: 3.93rem;
+  height: 3.93rem;
+  background: url(/images/holderBorder.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .holderMain {
+  position: absolute;
+  top: 45%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  width: 2.21rem;
+  height: 2.25rem;
+  background: url(/images/holderMain.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic-none .uploadText {
+  margin-left: 0.79rem;
+  font-size: 1rem;
+  opacity: 0.2;
+}
+.uploadContent .uploadPic {
+  width: 100%;
+  box-sizing: border-box;
+  border-bottom: 1px solid #F0F0F0;
+  height: 6.07rem;
+  line-height: 6.07rem;
+}
+.uploadContent .uploadPic .uploadThumb {
+  margin-top: 1.07rem;
+  position: relative;
+  float: left;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic .uploadThumb .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 1;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
+}
+.uploadContent .uploadPic .uploadThumb .thumb {
+  position: absolute;
+  border-radius: 0.21rem;
+  overflow: hidden;
+  top: 45%;
+  left: 54%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  width: 3.93rem;
+  height: 3.93rem;
+  background: url(/images/origin-work.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.uploadContent .uploadPic .uploadText {
+  margin-left: 0.79rem;
+  font-size: 1rem;
+  opacity: 0.2;
+}
+.uploadContent .uploadDesc {
+  display: block;
+  width: 100%;
+  margin: 1.07rem 0;
+}
+
+.header-logo {
+  width: 100%;
+  height: 3.57rem;
+  background-color: #fff;
+  /*border-bottom: 0.71rem solid #f7f7f7;*/
+}
+.header-portrait {
+  margin-top: -0.71rem;
+  width: 100%;
+  height: 9.32rem;
+  padding-top: 1.93rem;
+  box-sizing: border-box;
+  background-color: #f9d161;
+}
+.header-portrait .user-info {
+  /*width: 4.29rem;*/
+  /*margin: 0 auto;*/
+  /*text-align: center;*/
+}
+.header-portrait .user-info .portrait {
+  margin: 0 auto;
+  margin-bottom: 0.68rem;
+  width: 3.71rem;
+  height: 3.71rem;
+  border-radius: 100%;
+  overflow: hidden;
+}
+.header-portrait .user-info .portrait img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.header-portrait .user-info .nickname {
+  display: block;
+  width: 100%;
+  text-align: center;
+  font-size: 1.07rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+.header-nav {
+  display: block;
+  width: 100%;
+  height: 2.71rem;
+  background-color: #fff;
+  text-align: center;
+  border-bottom: 0.71rem solid #f7f7f7;
+}
+.header-nav .nav-item {
+  display: inline-block;
+  width: 33.3%;
+  height: 2.21rem;
+  text-align: center;
+  line-height: 2.71rem;
+  font-size: 0.86rem;
+  color: rgba(0, 0, 0, 0.49);
+}
+.header-nav .nav-item a {
+  display: inline-block;
+  width: 3.93rem;
+  height: 2.5rem;
+}
+.header-nav .active a {
+  font-size: 0.86rem;
+  color: rgba(0, 0, 0, 0.8);
+  border-bottom: 0.21rem solid #f9d161;
+}
+
 .hot-pageSection {
   width: 100%;
   background-color: #f7f7f7;
@@ -1674,73 +1957,6 @@ body {
   color: #000;
   background-color: #ffed4f;
   border-radius: 3.57rem;
-}
-
-.header-logo {
-  width: 100%;
-  height: 3.57rem;
-  background-color: #fff;
-  /*border-bottom: 0.71rem solid #f7f7f7;*/
-}
-.header-portrait {
-  margin-top: -0.71rem;
-  width: 100%;
-  height: 9.32rem;
-  padding-top: 1.93rem;
-  box-sizing: border-box;
-  background-color: #f9d161;
-}
-.header-portrait .user-info {
-  /*width: 4.29rem;*/
-  /*margin: 0 auto;*/
-  /*text-align: center;*/
-}
-.header-portrait .user-info .portrait {
-  margin: 0 auto;
-  margin-bottom: 0.68rem;
-  width: 3.71rem;
-  height: 3.71rem;
-  border-radius: 100%;
-  overflow: hidden;
-}
-.header-portrait .user-info .portrait img {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-.header-portrait .user-info .nickname {
-  display: block;
-  width: 100%;
-  text-align: center;
-  font-size: 1.07rem;
-  color: rgba(0, 0, 0, 0.8);
-}
-.header-nav {
-  display: block;
-  width: 100%;
-  height: 2.71rem;
-  background-color: #fff;
-  text-align: center;
-  border-bottom: 0.71rem solid #f7f7f7;
-}
-.header-nav .nav-item {
-  display: inline-block;
-  width: 33.3%;
-  height: 2.21rem;
-  text-align: center;
-  line-height: 2.71rem;
-  font-size: 0.86rem;
-  color: rgba(0, 0, 0, 0.49);
-}
-.header-nav .nav-item a {
-  display: inline-block;
-  width: 3.93rem;
-  height: 2.5rem;
-}
-.header-nav .active a {
-  font-size: 0.86rem;
-  color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.21rem solid #f9d161;
 }
 
 .main-processing {
@@ -2034,220 +2250,4 @@ body {
   font-size: 0.71rem;
   line-height: 0.89rem;
   color: rgba(0, 0, 0, 0.49);
-}
-
-
-.uploadHeader {
-  width: 100%;
-  height: 3.93rem;
-  line-height: 3.93rem;
-  border-bottom: 1px solid #EDEDED;
-  font-size: 0;
-}
-.uploadHeader .backPage {
-  float: left;
-  margin-left: 0.82rem;
-  cursor: pointer;
-}
-.uploadHeader .backPage .icon-backPage {
-  display: inline-block;
-  vertical-align: middle;
-  width: 0.75rem;
-  height: 1.36rem;
-  background: url(/images/icon-backPage.png) no-repeat 0 0;
-  background-size: 100%;
-  margin-right: 0.46rem;
-}
-.uploadHeader .backPage .text-backPage {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 1rem;
-  color: #000;
-  opacity: 0.8;
-}
-.uploadHeader .confirm-none {
-  float: right;
-  width: 4.29rem;
-  height: 1.86rem;
-  margin-top: 1.04rem;
-  margin-right: 0.86rem;
-  border-radius: 0.93rem;
-  background-color: #888;
-  color: #332D00;
-  font-size: 0.86rem;
-  text-align: center;
-  cursor: pointer;
-  /*font-weight: bold;*/
-}
-.uploadHeader .confirm {
-  float: right;
-  width: 4.29rem;
-  height: 1.86rem;
-  margin-top: 1.04rem;
-  margin-right: 0.86rem;
-  border-radius: 0.93rem;
-  box-shadow: 0 0.07rem 0.36rem 0 rgba(225, 228, 9, 0.5);
-  background-color: #ffe400;
-  color: #332D00;
-  font-size: 0.86rem;
-  text-align: center;
-  cursor: pointer;
-  /*font-weight: bold;*/
-}
-.leftArea {
-  float: left;
-}
-.leftArea .clips-wrapper {
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-  margin-right: 0.46rem;
-  border: 1px solid #eee;
-  border-radius: 0.18rem;
-  overflow: hidden;
-}
-.leftArea .clips-wrapper .clips {
-  display: block;
-  width: 100%;
-}
-.rightArea {
-  float: right;
-}
-.rightArea .clipsCount {
-  display: block;
-  margin-top: 4.2rem;
-  font-size: 0.79rem;
-  color: rgba(0, 0, 0, 0.2);
-}
-.uploadContent {
-  width: 94%;
-  margin: 0 3%;
-}
-.uploadContent .uploadPic-none {
-  width: 100%;
-  position: relative;
-  box-sizing: border-box;
-  border-bottom: 1px solid #F0F0F0;
-  height: 6.07rem;
-  line-height: 6.07rem;
-  padding-top: 1.07rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder {
-  position: relative;
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .cross {
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
-  position: absolute;
-  top: 0;
-  opacity: 0;
-  z-index: 1;
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileList {
-  position: absolute;
-  top: 0;
-  overflow: hidden;
-  display: block;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
-  display: block;
-  width: 100%;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
-  position: absolute;
-  display: block;
-  z-index: 2;
-  top: -0.7rem;
-  right: -0.8rem;
-  width: 1.29rem;
-  height: 1.32rem;
-  background: url(/images/uploadCancel.png) no-repeat 0 0;
-  background-size: 100%;
-  cursor: pointer;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
-  position: absolute;
-  z-index: 0;
-  top: 0rem;
-  left: 0rem;
-  width: 3.93rem;
-  height: 3.93rem;
-  background: url(/images/holderBorder.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic-none .picPlaceHolder .holderMain {
-  position: absolute;
-  top: 45%;
-  left: 54%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-  width: 2.21rem;
-  height: 2.25rem;
-  background: url(/images/holderMain.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic-none .uploadText {
-  margin-left: 0.79rem;
-  font-size: 1rem;
-  opacity: 0.2;
-}
-.uploadContent .uploadPic {
-  width: 100%;
-  box-sizing: border-box;
-  border-bottom: 1px solid #F0F0F0;
-  height: 6.07rem;
-  line-height: 6.07rem;
-}
-.uploadContent .uploadPic .uploadThumb {
-  margin-top: 1.07rem;
-  position: relative;
-  float: left;
-  width: 3.93rem;
-  height: 3.93rem;
-}
-.uploadContent .uploadPic .uploadThumb .uploadCancel {
-  position: absolute;
-  display: block;
-  z-index: 1;
-  top: -0.7rem;
-  right: -0.8rem;
-  width: 1.29rem;
-  height: 1.32rem;
-  background: url(/images/uploadCancel.png) no-repeat 0 0;
-  background-size: 100%;
-  cursor: pointer;
-}
-.uploadContent .uploadPic .uploadThumb .thumb {
-  position: absolute;
-  border-radius: 0.21rem;
-  overflow: hidden;
-  top: 45%;
-  left: 54%;
-  transform: translate(-50%, -50%);
-  z-index: 0;
-  width: 3.93rem;
-  height: 3.93rem;
-  background: url(/images/origin-work.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.uploadContent .uploadPic .uploadText {
-  margin-left: 0.79rem;
-  font-size: 1rem;
-  opacity: 0.2;
-}
-.uploadContent .uploadDesc {
-  display: block;
-  width: 100%;
-  margin: 1.07rem 0;
 }
