--- a/public/services/src/app/views/ask/index/index.html
+++ b/public/services/src/app/views/ask/index/index.html
@@ -6,7 +6,7 @@
 		<span class="nickname"><%= nickname %></span>
 	</div>
 	<a href="#ask/detail/<%= ask_id %>" class="workPic">
-		<img src="<%= ask_image_url %>" alt="作品">
+		<img src="<%= ask_image_url %>" alt="作品" class="old">
 	</a>
 	<span class="workDesc"><%= desc %></span>
 	<div class="help-btn-wrapper">
