--- a/public/services/src/app/views/upload/reply/upload-reply.less
+++ b/public/services/src/app/views/upload/reply/upload-reply.less
@@ -47,7 +47,7 @@
 		margin-right: 0.86rem;
 		border-radius: 0.93rem;
 		box-shadow: 0 0.07rem 0.36rem 0 rgba(225,228,9,0.5);
-		background-color: #ffe400;
+		background-color: #f9d161;
 		color: #332D00;
 		font-size: 0.86rem;
 		text-align: center;
