--- a/public/services/src/app/views/ask/index/ask-index.less
+++ b/public/services/src/app/views/ask/index/ask-index.less
@@ -1,3 +1,9 @@
+.header {
+    width: 100%;
+    z-index: 90;
+    position: fixed;
+    top: 0;
+}
 .grid-item {
     float: left;
     width: 47%;
@@ -7,6 +13,26 @@
     position: relative;
     display: block;
     width: 100%;
+}
+.container {
+    padding-top: 4.3rem;
+}
+.picBox {
+    position: fixed;
+    border-radius: 50%;
+    top: 50%;
+    opacity: 0.5;
+    width: 1rem;
+    height: 1rem;
+    transition: all 1s ease;
+}
+.picBoxAni {
+    z-index: 999;
+    top: 0.64rem !important;
+    left: 86% !important;
+    width: 2.29rem;
+    height: 2.29rem;
+    opacity: 1;
 }
     .index-ask-pageSection{
         width: 100%;
@@ -62,6 +88,7 @@
                 background-color: #fff;
             }
             .help-btn-wrapper{
+                position: relative;
                 padding: 0.5rem 0 0.5rem 0;
                 background-color: #fff;
                 .help-btn{
@@ -69,7 +96,7 @@
                     margin: 0 auto;
                     width: 6.29rem;
                     height: 2.04rem;
-                    background-color: #ffed4f;
+                    background-color: #f9d161;
                     border-radius: 3.57rem;
                     text-align: center;
                     line-height: 2.04rem;
