--- a/public/services/src/app/views/detail/detail.html
+++ b/public/services/src/app/views/detail/detail.html
@@ -24,7 +24,7 @@
 		<a class="workDesc"><%= desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="share"></span>
-			<a href="#ask/detail/<%= ask_id %>" class="ask-detail">查看原图</a>
+			<a href="#original/detail/<%= ask_id %>" class="ask-detail">查看原图</a>
 			<div class="communicate">
 				<% if(type == 2) { %>
 				<div class="like-btn <%= love_count?'liked-icon':'' %>" data-id="<%= reply_id %>" love-count="<%= love_count %>">
