--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -1,5 +1,5 @@
 <div class="header-logo clearfix">
-	<a href="#hot/reply" class="logo">
+	<a href="#hot/works" class="logo">
 		<img src="/images/logo.png" alt="LOGO">
 	</a>
 	<a href="" class="personalCenter">
@@ -21,7 +21,7 @@
 				<i class="icon-menuItem icon-menuItem-hall"></i>
 				<span class="text-menuItem">求P</span>
 			</a >
-			<a href="#ask/index" class="menuItem clearfix">
+			<a href="#original/index" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-ask"></i>
 				<span class="text-menuItem">帮P</span>
 			</a >
