--- a/public/main/src/less/common.less
+++ b/public/main/src/less/common.less
@@ -1656,7 +1656,57 @@ img.emojione {
     font-size: 13px;
     margin-top: 50px;
 }
-
+.reject-box{
+  position:fixed;
+  top:50%;
+  left:50%;
+  margin-left: -250px;
+  margin-top: -150px;
+  width: 500px;
+  height: 300px;
+  background: #fff;
+  border-radius: 4px;
+  border:1px solid #666;
+  font-size: 14px;
+  .title{
+    font-size: 20px;
+    text-align: center;
+    margin: 20px;
+  }
+  .container{
+    width: 400px;
+    margin: 0 auto;
+    .check-item{
+      float:left;
+      width:50%;
+      height:40px;
+      
+    }
+    .order-item{
+      padding: 20px 0;
+      .order-input{
+        width: 300px;
+        height: 30px;
+      }
+    }
+     .reject-submit{
+        background: #aaa;
+        color: #fff;
+        display: block;
+        width: 150px;
+        height: 40px;
+        border-radius: 4px;
+        margin: 20px auto 0;
+        text-align: center;
+        line-height: 40px;
+        border:0;
+        outline:0;
+      }
+      .reject-submit:hover{
+        background: #f00;
+      }
+  }
+}
 
 /*
     404 错误页面样式
