--- a/public/main/res/app/templates/homepage/HomeHeadView.html
+++ b/public/main/res/app/templates/homepage/HomeHeadView.html
@@ -44,7 +44,7 @@
 			<li class="menu-bar-item menu-nav-ask home-others hide" data-type="ask" data-id="<%= uid %>">ta的求P</li>
 			<li class="menu-bar-item menu-nav-ask home-self hide" data-type="ask" data-id="<%= uid %>">求P</li>
 			<li class="menu-bar-item menu-nav-conduct" data-type="conduct" data-id="<%= uid %>">进行中</li>
-			<li class="menu-bar-item menu-nav-collection">收藏</li>
+			<li class="menu-bar-item menu-nav-collection">兼职任务</li>
 			<li class="menu-bar-item menu-nav-liked home-self hide" data-id="<%= uid %>">我赞过的</li>
 			<li class="menu-bar-item menu-nav-liked home-others hide" data-id="<%= uid %>">ta赞过的</li>
 		</div>
