--- a/public/main/res/app/templates/homepage/HomeTask.html
+++ b/public/main/res/app/templates/homepage/HomeTask.html
@@ -32,7 +32,9 @@
 					</div>
 				</a>
 				<a class="download" data-type="<%= type %>" data-id="<%= id %>"><div class="conduct-onload"><span class="bg-sprite-new"></span><em>原图</em></div></a>
-				
+				<a class="refuse-uploading-popup" href="#refuse-uploading-popup"><div class="conduct-onload" style=" margin-right: 10px;
+    text-align: center;
+"><em style="width: 85px">拒绝任务</em></div></a>
 			</div>
 		</div>
 	</div>
