--- a/public/services/src/app/views/hot/works/works.html
+++ b/public/services/src/app/views/hot/works/works.html
@@ -1,5 +1,5 @@
 <div class="workSection">
-	<a href="#personal/personal/<%= uid %>" class="workSectionHeader clearfix">
+	<a href="#personal/index/<%= uid %>" class="workSectionHeader clearfix">
 		<div class="portrait">
 			<img src="<%= avatar %>" alt="用户头像">
 		</div>
