--- a/public/services/src/app/views/personal/processing/processing.html
+++ b/public/services/src/app/views/personal/processing/processing.html
@@ -1,13 +1,13 @@
 <div class="main-processing">
 	<div class="processing-block clearfix">
-		<a href="#ask/detail/<%= ask_id %>" class="pic">
+		<a href="#original/detail/<%= ask_id %>" class="pic">
 		<% _.each(ask_uploads, function(img) { %>
 			<img src="<%= img.image_url %>" alt="作品">
 		<% } ) %>
 		</a>
 		<div class="content">
 			<div class="content-top clearfix">
-				<a href="#personal/personal/<%= uid %>" class="user-info">
+				<a href="#personal/index/<%= uid %>" class="user-info">
 					<div class="portrait">
 						<img src="<%= avatar %>" alt="用户头像">
 					</div>
@@ -19,7 +19,7 @@
 				</div> -->
 			</div>
 			<div class="content-main">
-				<a href="#ask/detail/<%= ask_id %>" class="main-text"><%= desc %></a>
+				<a href="#original/detail/<%= ask_id %>" class="main-text"><%= desc %></a>
 			</div>
 			<div class="content-bottom clearfix">
 <!-- 				<div class="download" data-type="<%= type %>" data-id="<%= ask_id%>">
