--- a/public/services/src/app/views/personal/works/works.html
+++ b/public/services/src/app/views/personal/works/works.html
@@ -1,5 +1,5 @@
 
-<a href="#ask/detail/<%= ask_id %>" class="workSection">
+<a href="#original/detail/<%= ask_id %>" class="workSection">
 	<img src="<%= image_url %>" alt="作品" class="workPic">
 	<div class="workSectionFooter clearfix">
 		<div class="footerWrapper">
